infrastructure/cloud/managed-clusters/home-k8s-tailscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-k8s-tailscale-proxy
template:
  spec:
    serviceAccountName: tailscale
    containers:
    - name: tailscale
      imagePullPolicy: Always
      image: ghcr.io/tailscale/tailscale:v1.18.2
      securityContext:
        capabilities:
          add:
          - NET_ADMIN
