infrastructure/cloud/managed-clusters/home-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-proxy-headers: X-Forwarded-Proto:https
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/service.serversscheme: https
  name: home-k8s-apiserver-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: home-k8s.jtcressy.net
      http:
        paths:
          - backend:
              service:
                name: home-k8s-apiserver
                port:
                  name: api
            pathType: ImplementationSpecific
